# rust-godot-legion-setup

./: .gitignore  README.md
godot/: GameWorld.gdns  GameWorld.tscn  libtutproj.gdnlib  project.godot
rust/: Cargo.toml
rust/src/: gameworld.rs  lib.rs
